<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sandwiches</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcomemsg">Choose Topping Options</string>
    <string name="breadwheat">Wheat</string>
    <string name="breadwhite">White</string>
    <string name="breadrye">Rye</string>
    <string name="Tomato">Tomato</string>
    <string name="onion">Onion</string>
    <string name="Chesse">Chesse</string>
    <string name="Lettuce">lettuce</string>
    <string name="Bacon">bacon</string>
    <string name="peperoni">Pepperoni</string>
    <string name="turkey">Turkey</string>
    <string name="choosebread">Choose sandwich bread</string>
    <string name="placeorder">Place My Order! Please</string>
    <string name="confirmtitle">Confirmation Screen</string>
    <string name="confirmquestion">Are you sure,Touch Yes to confirm your sandwitch</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_main_activity2">OrderPlaced</string>
    <string name="sucessfully">Order placed sucessfully!</string>
    <string name="summary">your sandwitch summary is:</string>
    <string name="title_activity_counter_selection">CounterSelection</string>
    <string name="counterlabel">choose, how much sandwitch do you want</string>
    <string name="Continue">Continue</string>
    <string name="next">Next Sandwitch</string>
    <string name="title_activity_sandwitch2">Sandwitch 2</string>

</resources>
